@@ -72,7 +72,7 @@ BSD syslogd. For example, when TAG is "named[12345]", programname is
 "syslog.info")</td>
 </tr>
 <tr>
-<td><span style="font-weight: bold;">iut</span></td>
+<td><b>iut</b></td>
 <td>the monitorware InfoUnitType - used when talking
 to a <a href="http://www.monitorware.com">MonitorWare</a>
 backend (also for <a href="http://www.phplogcon.org/">phpLogCon</a>)</td>
@@ -138,9 +138,25 @@ draft-ietf-syslog-protocol</td>
 draft-ietf-syslog-protocol</td>
 </tr>
 <tr>
-<td height="24"><b>msgid</b></td>
-<td height="24">The contents of the MSGID field from
+<td><b>msgid</b></td>
+<td>The contents of the MSGID field from
 IETF draft draft-ietf-syslog-protocol</td>
+</tr>
+<td><b>inputname</b></td>
+<td>The name of the input module that generated the
+message (e.g. "imuxsock", "imudp"). Note that not all modules
+necessarily provide this property. If not provided, it is an
+empty string. Also note that the input module may provide
+any value of its liking. Most importantly, it is <b>not</b>
+necessarily the module input name. Internal sources can also
+provide inputnames. Currently, "rsyslogd" is defined as inputname
+for messages internally generated by rsyslogd, for example startup
+and shutdown and error messages.
+This property is considered useful when trying to filter messages
+based on where they originated - e.g. locally generated messages
+("rsyslogd", "imuxsock", "imklog") should go to a different place
+than messages generated somewhere.
+</td>
 </tr>
 <tr>
 <td><b>$now</b></td>
@@ -176,6 +192,11 @@ range from 0 to 3 (for the four quater hours that are in each hour)</td>
 <tr>
 <td><b>$minute</b></td>
 <td>The current minute (2-digit)</td>
+</tr>
+<tr>
+<td><b>$myhostname</b></td>
+<td>The name of the current host as it knows itself (probably useful
+for filtering in a generic way)</td>
 </tr>
 </tbody>
 </table>
