@@ -3,6 +3,11 @@ Version 3.21.5  [DEVEL] (rgerhards), 2008-09-??
 - added new capability to property replacer: multiple immediately
   successive field delimiters are treated as a single one.
   Thanks to Zhuang Yuyao for the patch.
+- added message property "inputname", which contains the name of the
+  input (module) that generated it. Presence is depending on suport in
+  each input module (else it is blank).
+- added system property "$myhostname", which contains the name of the
+  local host as it knows itself.
 ---------------------------------------------------------------------------
 Version 3.21.4  [DEVEL] (rgerhards), 2008-09-04
 - removed compile time fixed message size limit (was 2K), limit can now
